fix: weird layout on webkit
The height: 100% + iframe + grid seems to break something and makes the
site unusable. (https://bugs.webkit.org/show_bug.cgi?id=246303)

The index page still look quite bad, but at least the real sort page
looks correct now and the config no longer overlaps with the buttons.

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -143,9 +143,6 @@ body {
 }
 
 .sorter > .image {
-  width: 100%;
-  height: 100%;
-  margin: auto;
   grid-row: 1 / 7;
   cursor: pointer;
 }
